i print Title Issue but i get error in Description and artists List Array i will fix this error

--- a/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -23,7 +23,14 @@
 </head>
 <body>
     <div>
-        <h1> Hello From our View</h1>
+        <h1>@seriesTitle</h1>
+        <h2>Issue #@issueNumber</h2>
+
+        <h5>Description:</h5>
+        <div>@description</div>
+
+        <h5>Artists</h5>
+        <div>@artists</div>
     </div>
 </body>
 </html>
