--- a/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -27,7 +27,7 @@
         <h2>Issue #@issueNumber</h2>
 
         <h5>Description:</h5>
-        <div>@description</div>
+        <div>@Html.Raw(description)</div>
 
         <h5>Artists</h5>
         <div>@artists</div>
