--- a/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -30,7 +30,14 @@
         <div>@Html.Raw(description)</div>
 
         <h5>Artists</h5>
-        <div>@artists</div>
+        <div>
+                <ul>
+                        @foreach (var artist in artists)
+                        {
+                                <li>@artist</li>
+                        }
+                </ul>
+        </div>
     </div>
 </body>
 </html>
